<resources>
    <string name="app_name">My Life In Order</string>
    <string name="button">Button</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="mockUpText">Text</string>
    <string name="emptyText"> </string>

    <string name="residence_history">History of Residence</string>
    <string name="employment_history">History of Employment</string>
    <string name="education_history">History of Education</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="insurances">Insurances</string>
    <string name="loans">Loans</string>
    <string name="doctors">My Doctors</string>

    <!-- Address -->
    <string name="country">country</string>
    <string name="street">Street</string>
    <string name="line2">Line 2</string>
    <string name="suburb">Suburb</string>
    <string name="state">State</string>
    <string name="post_code">Post Code</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>

    <!-- Contact Details -->
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email address</string>


    <!-- Employment -->
    <string name="role">Role</string>

    <!-- Education -->
    <string name="field_of_study">Field of Study</string>
    <string name="grade">Grade</string>
    <string name="insurance_type">Insurance Type</string>
    <string name="payment_type">Payment per</string>
    <string name="amount">Amount</string>
    <string name="loan_type">Loan Type</string>
    <string name="loan_institue">Lender</string>
    <string name="repayment">Repayment</string>
    <string name="repayment_amount">Repayment Amount</string>
    <string name="initial_amount">Loan amount</string>
    <string name="subscriber_name">Subscriber Name</string>

    <!-- Insurance -->
    <string-array name="payment_per">
        <item>Week</item>
        <item>Fortnight</item>
        <item>Month</item>
        <item>Quarter</item>
        <item>6 Months</item>
        <item>Annual</item>
    </string-array>

    <string-array name="insurance_type">
        <item>Car</item>
        <item>Building</item>
        <item>Income</item>
        <item>Investment Property</item>
        <item>Life</item>
    </string-array>

    <string-array name="loan_type">
        <item>Car</item>
        <item>Home</item>
        <item>Personal</item>
    </string-array>

    <string-array name="countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua And Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia And Herzegovina</item>
        <item>Botswana</item>
        <item>Bouvet Island</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>Brunei Darussalam</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Cote D\'Ivoire</item>
        <item>Croatia (Local Name: Hrvatska)</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Falkland Islands (Malvinas)</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>France, Metropolitan</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>French Southern Territories</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Heard Island &amp; Mcdonald Islands</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran, Islamic Republic Of</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea, Democratic People\'S Republic Of</item>
        <item>Korea, Republic Of</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Lao People\'S Democratic Republic</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libyan Arab Jamahiriya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Macedonia, The Former Yugoslav Republic Of</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia, Federated States Of</item>
        <item>Moldova, Republic Of</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reunion</item>
        <item>Romania</item>
        <item>Russian Federation</item>
        <item>Rwanda</item>
        <item>Saint Helena</item>
        <item>Saint Kitts And Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Pierre And Miquelon</item>
        <item>Saint Vincent And The Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome And Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia (Slovak Republic)</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard And Jan Mayen Islands</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syrian Arab Republic</item>
        <item>Taiwan, Province Of China</item>
        <item>Tajikistan</item>
        <item>Tanzania, United Republic Of</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad And Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks And Caicos Islands</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>United States Minor Outlying Islands</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City State (Holy See)</item>
        <item>Venezuela</item>
        <item>Viet Nam</item>
        <item>Virgin Islands (British)</item>
        <item>Virgin Islands (U.S.)</item>
        <item>Wallis And Futuna Islands</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Yugoslavia</item>
        <item>Zaire</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
</resources>