<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/country_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:minHeight="50dp"
            android:text="@string/mockUpText"
            android:hint="@string/country"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/street_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/mockUpText"
            android:hint="@string/street"
            android:minHeight="50dp"
            android:layout_below="@+id/country_edit_text"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/line2_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/mockUpText"
            android:minHeight="50dp"
            android:hint="@string/line2"
            android:layout_below="@+id/street_edit_text"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/suburb_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/mockUpText"
            android:hint="@string/suburb"
            android:minHeight="50dp"
            android:layout_below="@+id/line2_edit_text"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/state_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/mockUpText"
            android:hint="@string/state"
            android:minHeight="50dp"
            android:layout_below="@+id/suburb_edit_text"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/post_code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/mockUpText"
            android:hint="@string/post_code"
            android:minHeight="50dp"
            android:inputType="number"
            android:layout_below="@+id/state_edit_text"
            android:textColor="@color/black"/>

    </RelativeLayout>
</FrameLayout>