<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:minHeight="50dp"
            android:text="@string/mockUpText"
            android:hint="@string/name"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/mockUpText"
            android:hint="@string/phone"
            android:minHeight="50dp"
            android:layout_below="@+id/name_edit_text"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/mockUpText"
            android:minHeight="50dp"
            android:hint="@string/email"
            android:layout_below="@+id/phone_edit_text"
            android:textColor="@color/black"/>
    </RelativeLayout>
</FrameLayout>