<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/item_header"
            android:id="@+id/header_section" />

    <!-- Main info section -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:id="@+id/content_section"
        android:visibility="visible">

        <include layout="@layout/date_item"
            android:id="@+id/date_panel_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/field_study_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:minHeight="50dp"
            android:text="@string/mockUpText"
            android:hint="@string/field_of_study"
            android:layout_below="@id/date_panel_address"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/grade_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:minHeight="50dp"
            android:text="@string/mockUpText"
            android:hint="@string/grade"
            android:layout_below="@id/field_study_edit_text"
            android:textColor="@color/black"/>

        <include layout="@layout/contact_details_item"
            android:layout_below="@+id/grade_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact_section"/>

        <include layout="@layout/address_item"
            android:id="@+id/address_panel_address"
            android:layout_below="@id/contact_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <!-- End of main info section -->

    </LinearLayout>

</androidx.cardview.widget.CardView>